<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorCustom"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/main_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/main_textView"
        android:layout_marginTop="20dp"
        android:textColor="#FDFCFC"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_below="@id/main_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/textView3"
        android:layout_below="@id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnCharging"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/main_btnCharging"
        android:textAllCaps="false"
        android:layout_below="@id/textView3"
        android:background="@color/colorWhite"
        android:layout_centerHorizontal="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="211dp" />

    <Button
        android:id="@+id/btnRecipe"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/main_btnRecipe"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnCharging"
        android:background="@color/colorGray"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="267dp" />

    <Button
        android:id="@+id/btnCurrency"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/main_btnCurrency"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnRecipe"
        android:background="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="324dp" />

    <Button
        android:id="@+id/btnNews"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/main_btnNews"
        android:textAllCaps="false"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/btnCurrency"
        android:background="@color/colorGray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="380dp" />

</RelativeLayout>